# finetune-openai-whisper

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: run_train.sh  train.py
finetune_openai_whisper/: __init__.py  config.py  convert_ckpt_to_official_whisper_format.py  helpers.py  utils.py  whisper_dataset.py  whisper_model_pl.py  xer.py
